<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>JednotkySearchForm</class>
 <widget class="QWidget" name="JednotkySearchForm">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>248</width>
    <height>181</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QGridLayout" name="gridLayout">
   <item row="0" column="0">
    <widget class="QLabel" name="label">
     <property name="text">
      <string>Č. jednotky:</string>
     </property>
    </widget>
   </item>
   <item row="1" column="0">
    <widget class="QLabel" name="label_2">
     <property name="text">
      <string>Č. domovní:</string>
     </property>
    </widget>
   </item>
   <item row="2" column="0">
    <widget class="QLabel" name="label_3">
     <property name="text">
      <string>Na parcele:</string>
     </property>
    </widget>
   </item>
   <item row="3" column="0">
    <widget class="QLabel" name="label_4">
     <property name="text">
      <string>Zp. využití:</string>
     </property>
    </widget>
   </item>
   <item row="4" column="0">
    <widget class="QLabel" name="label_5">
     <property name="text">
      <string>LV:</string>
     </property>
    </widget>
   </item>
   <item row="0" column="1">
    <widget class="QLineEdit" name="mCisloJednotkyLineEdit"/>
   </item>
   <item row="1" column="1">
    <widget class="QLineEdit" name="mCisloDomovniLineEdit"/>
   </item>
   <item row="2" column="1">
    <widget class="QLineEdit" name="mNaParceleLineEdit"/>
   </item>
   <item row="4" column="1">
    <widget class="QLineEdit" name="mLvJednotkyLineEdit"/>
   </item>
   <item row="3" column="1">
    <widget class="QComboBox" name="mZpVyuzitiCombo"/>
   </item>
   <item row="5" column="1">
    <spacer name="verticalSpacer">
     <property name="orientation">
      <enum>Qt::Vertical</enum>
     </property>
     <property name="sizeHint" stdset="0">
      <size>
       <width>20</width>
       <height>40</height>
      </size>
     </property>
    </spacer>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
